--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,6 @@
     list-style-type: none;
     --color-base: #C4C4C4;
     --color-black: #3A3A3A;
-    --color-orange: #e06004;
     --color-white: #FFFFFF;
     color: var(--color-white)
 }
@@ -31,12 +30,27 @@ body {
 }
 
 .section-orange {
-    background-color: var(--color-orange)
+    background-color: var(--color-white)
 }
 
 .title-section {
     justify-content: center;
     width: 100%;
+}
+
+p {
+    color: black;
+}
+
+a {
+    color: #004aad;
+    text-decoration: none;
+    transition: color 0.6s ease;
+}
+
+.fab,
+.fas {
+    color: #004aad;
 }
 
 
@@ -47,7 +61,7 @@ header {
     z-index: 10;
     width: 100%;
     height: 55px;
-    background-color: var(--color-black);
+    background-color: var(--color-white);
     box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2);
 }
 
@@ -67,17 +81,23 @@ header {
     padding: 15px 20px;
     height: 55px;
     line-height: 55px;
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .navbar ul li a:hover {
     color: var(--color-black);
-    background-color: var(--color-orange);
+    background-color: var(--color-white);
     transition: 0.3s linear;
 }
 
 
 /*---------------- Inicio ----------------*/
+
+.portrait-title,
+h2,
+h3 {
+    color: black;
+}
 
 .container-inicio {
     justify-content: center;
@@ -103,9 +123,6 @@ header {
     font-size: 30px;
     font-family: 'Montserrat', sans-serif;
 }
-
-
-/*---------------- Sobre mi ----------------*/
 
 .container-sobre {
     padding: 60px 20px;
