--- a/css/styles.css
+++ b/css/styles.css
@@ -85,8 +85,8 @@ header {
 }
 
 .navbar ul li a:hover {
-    color: var(--color-black);
-    background-color: var(--color-white);
+    color: white;
+    background-color: #004aad;
     transition: 0.3s linear;
 }
 
