--- a/css/styles.css
+++ b/css/styles.css
@@ -117,12 +117,13 @@ h3 {
 
 .container-inicio .subtitle {
     flex-direction: column;
-    padding-top: 40px;
+    padding-top: 20px;
 }
 
 .container-inicio .subtitle h2 {
-    font-size: 30px;
     font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    color: white;
 }
 
 .container-sobre {
