--- a/css/styles.css
+++ b/css/styles.css
@@ -1,60 +1,27 @@
-/*---------------- General ----------------*/
+/*---------- General styling ----------*/
 
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Montserrat', sans-serif;
     text-decoration: none;
-    list-style-type: none;
-    --color-base: #C4C4C4;
-    --color-black: #3A3A3A;
+    font-family: 'Montserrat';
+    --color-base: #004aad;
     --color-white: #FFFFFF;
-    color: var(--color-white)
 }
 
-html {
-    scroll-behavior: smooth;
-}
-
-body {
-    background-color: var(--color-base);
-    height: 100%;
+a {
+    color: #004aad;
 }
 
 .flex {
     display: flex;
 }
 
-.section-black {
-    background-color: var(--color-black)
+.section-blue {
+    background-color: var(--color-base)
 }
 
-.section-orange {
-    background-color: var(--color-white)
-}
-
-.title-section {
-    justify-content: center;
-    width: 100%;
-}
-
-p {
-    color: black;
-}
-
-a {
-    color: #004aad;
-    text-decoration: none;
-    transition: color 0.6s ease;
-}
-
-.fab,
-.fas {
-    color: #004aad;
-}
-
-
-/*---------------- Header ----------------*/
+/*---------- Navbar ----------*/
 
 header {
     position: fixed;
@@ -65,6 +32,10 @@ header {
     box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2);
 }
 
+.logo img {
+    height: 50px;
+}
+
 .navbar {
     justify-content: center;
     align-items: center;
@@ -73,15 +44,11 @@ header {
 
 .navbar ul li {
     display: inline-block;
-}
-
-.navbar ul li a {
     font-size: 18px;
     margin: 0 5px;
     padding: 15px 20px;
     height: 55px;
     line-height: 55px;
-    font-family: 'Montserrat', sans-serif;
 }
 
 .navbar ul li a:hover {
@@ -90,62 +57,65 @@ header {
     transition: 0.3s linear;
 }
 
-.navbar-toggler {
-    margin-right: 50px;
-    margin-right: 0px;
+/*---------- Home ----------*/
+
+.container {
+    width: 100%;
 }
 
-
-/*---------------- Inicio ----------------*/
-
-.portrait-title,
-h2,
-h3 {
-    color: black;
-}
-
-.container-inicio {
+.container-home {
     justify-content: center;
     align-items: flex-start;
     flex-direction: column;
     position: relative;
-    height: 100vh;
+    height: 80vh;
     padding-left: 5vw;
-    background: #004aad;
-    /*    background: url('/img/mepc.png') center center/cover no-repeat; */
+    /* background: url('/img/mepc.png') center center/cover no-repeat; */ 
 }
 
-.container-inicio .title h1 {
+.container-home .title h1 {
     font-size: 60px;
-    font-family: 'Montserrat', sans-serif;
+    color: var(--color-white);
 }
 
-.container-inicio .subtitle {
-    flex-direction: column;
-    padding-top: 20px;
-}
-
-.container-inicio .subtitle h2 {
-    font-family: 'Montserrat', sans-serif;
+.container-home .subtitle h2 {
+    color: var(--color-white);
+    font-family: 'Montserrat';
     font-weight: 400;
-    color: white;
 }
 
-.container-sobre {
+.container-video {
+    padding: 60px 20px;
+    text-align: center;
+}
+
+.container-about {
     padding: 60px 20px;
     justify-content: space-around;
     align-content: space-around;
     align-items: center;
     flex-wrap: wrap;
+    width: 33%;
+    text-align: center;
+    float: left;
 }
 
-.container-sobre .foto img {
+.container-about h3 {
+    font-family: 'Montserrat';
+    font-weight: 400;
+}
+
+.container-about .avatar img {
     width: 344.5px;
     height: 344.5px;
     border-radius: 50%;
 }
 
-.container-sobre .text-wrapper {
+.container-about .network-icon {
+    list-style: none;
+}
+
+.container-about .text-wrapper {
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
@@ -153,46 +123,237 @@ h3 {
     width: 50%;
 }
 
-.container-sobre .title-section h2 {
-    font-size: 50px;
-    margin: 10px 0px 20px 0px;
-    color: var(--color-white);
-}
 
-.container-sobre .text-wrapper p {
-    font-size: 22px;
-}
-
-
-/* Footer */
-
-footer {
-    background-color: white;
-    margin: 4rem 0 0;
-    padding: 2rem 0;
-    width: 100%;
-}
-
-footer p {
-    font-size: 0.75rem;
+/*---------- Footer ----------*/
+    
+.site-footer {
     text-align: center;
 }
 
-footer .powered-by {
-    font-size: 0.67rem;
+    
+/*---------- Media queries ----------*/
+
+/*---------- Navbar ----------*/
+
+@media (max-width: 820px) {
+    .logo img {
+     height: 36px;
+    }
+   
+    nav ul {
+     position: absolute;
+     right: 0;
+     top: 0;
+     height: 100vh;
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     justify-content: space-around;
+     width: 70%;
+     padding: 100px 16px;
+     transform: translateX(105%);
+     transition: transform 0.5s ease-in;
+     overflow-x: hidden;
+    }
+   
+    nav ul li a {
+     padding: 12px 0;
+     margin: 0 16px;
+    }
 }
 
-.site-footer,
-footer a.back-to-top i {
-    color: rgba(0, 0, 0, 0.54);
-}
 
 
-/* navar */
 
-.logo {
-    max-height: 100%;
-    width: auto;
-    margin-right: 3.5rem;
-    box-sizing: inherit;
-}
+/*---------------- General 
+            
+            * {
+                margin: 0;
+                padding: 0;
+                font-family: 'Montserrat', sans-serif;
+                text-decoration: none;
+                list-style-type: none;
+                --color-base: #C4C4C4;
+                --color-black: #3A3A3A;
+                --color-white: #FFFFFF;
+                color: var(--color-white)
+            }
+            
+            html {
+                scroll-behavior: smooth;
+            }
+            
+            body {
+                background-color: var(--color-base);
+                height: 100%;
+            }
+            
+            .flex {
+                display: flex;
+            }
+            
+            .section-black {
+                background-color: var(--color-black)
+            }
+            
+            .section-orange {
+                background-color: var(--color-white)
+            }
+            
+            .title-section {
+                justify-content: center;
+                width: 100%;
+            }
+            
+            p {
+                color: black;
+            }
+            
+            a {
+                color: #004aad;
+                text-decoration: none;
+                transition: color 0.6s ease;
+            }
+            
+            .fab,
+            .fas {
+                color: #004aad;
+            }
+            /*---------------- Header 
+            
+            header {
+                position: fixed;
+                z-index: 10;
+                width: 100%;
+                height: 55px;
+                background-color: var(--color-white);
+                box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2);
+            }
+            
+            .navbar {
+                justify-content: center;
+                align-items: center;
+                height: 55px;
+            }
+            
+            .navbar ul li {
+                display: inline-block;
+            }
+            
+            .navbar ul li a {
+                font-size: 18px;
+                margin: 0 5px;
+                padding: 15px 20px;
+                height: 55px;
+                line-height: 55px;
+                font-family: 'Montserrat', sans-serif;
+            }
+            
+            .navbar ul li a:hover {
+                color: white;
+                background-color: #004aad;
+                transition: 0.3s linear;
+            }
+            
+            .navbar-toggler {
+                margin-right: 50px;
+                margin-right: 0px;
+            }
+            /*---------------- Inicio 
+            
+            .portrait-title,
+            h2,
+            h3 {
+                color: black;
+            }
+            
+            .container {
+                width: 100%;
+            }
+            
+            .container-inicio {
+                justify-content: center;
+                align-items: flex-start;
+                flex-direction: column;
+                position: relative;
+                height: 100vh;
+                padding-left: 5vw;
+                background: #004aad;
+                /*    background: url('/img/mepc.png') center center/cover no-repeat; 
+            }
+            
+            .container-inicio .title h1 {
+                font-size: 60px;
+                font-family: 'Montserrat', sans-serif;
+            }
+            
+            .container-inicio .subtitle {
+                flex-direction: column;
+                padding-top: 20px;
+            }
+            
+            .container-inicio .subtitle h2 {
+                font-family: 'Montserrat', sans-serif;
+                font-weight: 400;
+                color: white;
+            }
+            
+            .container-sobre {
+                padding: 60px 20px;
+                justify-content: space-around;
+                align-content: space-around;
+                align-items: center;
+                flex-wrap: wrap;
+            }
+            
+            .container-sobre .foto img {
+                width: 344.5px;
+                height: 344.5px;
+                border-radius: 50%;
+            }
+            
+            .container-sobre .foto {
+                width: 33%;
+                text-align: center;
+                float: left;
+            }
+            
+            .portrait-title h2 h3 {
+                font-size: 16px;
+                color: #666;
+            }
+            
+            .container-sobre .text-wrapper {
+                flex-direction: column;
+                justify-content: space-around;
+                align-items: center;
+                text-align: center;
+                width: 50%;
+            }
+            
+            .container-sobre .title-section h2 {
+                font-size: 50px;
+                margin: 10px 0px 20px 0px;
+                color: var(--color-white);
+            }
+            
+            .container-sobre .text-wrapper p {
+                font-size: 22px;
+            }
+            /* Footer
+            
+            .site-footer {
+                color: #000000;
+                font-family: 'Montserrat';
+                background-color: white;
+                text-align: center;
+                line-height: 2;
+            }
+            /* navar 
+            
+            .logo {
+                max-height: 100%;
+                width: auto;
+                margin-right: 3.5rem;
+                box-sizing: inherit;
+            }
