--- a/css/styles.css
+++ b/css/styles.css
@@ -54,6 +54,8 @@ header {
     padding: 15px 20px;
     height: 55px;
     line-height: 55px;
+    font-family: 'Montserrat';
+    font-weight: 500;
 }
 
 .navbar .nav-ul a:after {
@@ -163,10 +165,9 @@ header {
 }
     
 
-/*---------- Media queries ----------*/
+/*---------- Media queries 820 ----------*/
 
 /*---------- Navbar ----------*/
-
 
 @media (max-width: 820px) {
     .logo img {
@@ -195,198 +196,27 @@ header {
     }
 }
 
+/*---------- Hero ----------*/
+
+.container {
+    width: 30%;
+}
 
 
+/*---------- Media queries 480 ----------*/
 
-/*---------------- General 
-            
-            * {
-                margin: 0;
-                padding: 0;
-                font-family: 'Montserrat', sans-serif;
-                text-decoration: none;
-                list-style-type: none;
-                --color-base: #C4C4C4;
-                --color-black: #3A3A3A;
-                --color-white: #FFFFFF;
-                color: var(--color-white)
-            }
-            
-            html {
-                scroll-behavior: smooth;
-            }
-            
-            body {
-                background-color: var(--color-base);
-                height: 100%;
-            }
-            
-            .flex {
-                display: flex;
-            }
-            
-            .section-black {
-                background-color: var(--color-black)
-            }
-            
-            .section-orange {
-                background-color: var(--color-white)
-            }
-            
-            .title-section {
-                justify-content: center;
-                width: 100%;
-            }
-            
-            p {
-                color: black;
-            }
-            
-            a {
-                color: #004aad;
-                text-decoration: none;
-                transition: color 0.6s ease;
-            }
-            
-            .fab,
-            .fas {
-                color: #004aad;
-            }
-            /*---------------- Header 
-            
-            header {
-                position: fixed;
-                z-index: 10;
-                width: 100%;
-                height: 55px;
-                background-color: var(--color-white);
-                box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2);
-            }
-            
-            .navbar {
-                justify-content: center;
-                align-items: center;
-                height: 55px;
-            }
-            
-            .navbar ul li {
-                display: inline-block;
-            }
-            
-            .navbar ul li a {
-                font-size: 18px;
-                margin: 0 5px;
-                padding: 15px 20px;
-                height: 55px;
-                line-height: 55px;
-                font-family: 'Montserrat', sans-serif;
-            }
-            
-            .navbar ul li a:hover {
-                color: white;
-                background-color: #004aad;
-                transition: 0.3s linear;
-            }
-            
-            .navbar-toggler {
-                margin-right: 50px;
-                margin-right: 0px;
-            }
-            /*---------------- Inicio 
-            
-            .portrait-title,
-            h2,
-            h3 {
-                color: black;
-            }
-            
-            .container {
-                width: 100%;
-            }
-            
-            .container-inicio {
-                justify-content: center;
-                align-items: flex-start;
-                flex-direction: column;
-                position: relative;
-                height: 100vh;
-                padding-left: 5vw;
-                background: #004aad;
-                /*    background: url('/img/mepc.png') center center/cover no-repeat; 
-            }
-            
-            .container-inicio .title h1 {
-                font-size: 60px;
-                font-family: 'Montserrat', sans-serif;
-            }
-            
-            .container-inicio .subtitle {
-                flex-direction: column;
-                padding-top: 20px;
-            }
-            
-            .container-inicio .subtitle h2 {
-                font-family: 'Montserrat', sans-serif;
-                font-weight: 400;
-                color: white;
-            }
-            
-            .container-sobre {
-                padding: 60px 20px;
-                justify-content: space-around;
-                align-content: space-around;
-                align-items: center;
-                flex-wrap: wrap;
-            }
-            
-            .container-sobre .foto img {
-                width: 344.5px;
-                height: 344.5px;
-                border-radius: 50%;
-            }
-            
-            .container-sobre .foto {
-                width: 33%;
-                text-align: center;
-                float: left;
-            }
-            
-            .portrait-title h2 h3 {
-                font-size: 16px;
-                color: #666;
-            }
-            
-            .container-sobre .text-wrapper {
-                flex-direction: column;
-                justify-content: space-around;
-                align-items: center;
-                text-align: center;
-                width: 50%;
-            }
-            
-            .container-sobre .title-section h2 {
-                font-size: 50px;
-                margin: 10px 0px 20px 0px;
-                color: var(--color-white);
-            }
-            
-            .container-sobre .text-wrapper p {
-                font-size: 22px;
-            }
-            /* Footer
-            
-            .site-footer {
-                color: #000000;
-                font-family: 'Montserrat';
-                background-color: white;
-                text-align: center;
-                line-height: 2;
-            }
-            /* navar 
-            
-            .logo {
-                max-height: 100%;
-                width: auto;
-                margin-right: 3.5rem;
-                box-sizing: inherit;
-            }
+/*---------- Hero ----------*/
+
+@media (max-width: 480px) {
+    .container-hero .title h1 {
+        font-size: 30px;
+    }
+
+    .container-hero .subtitle h2 {
+        font-size: 18px;
+    }
+
+
+}
+
+
