--- a/css/styles.css
+++ b/css/styles.css
@@ -167,7 +167,9 @@ header {
 
 /*---------- Media queries 820 ----------*/
 
-/*---------- Navbar ----------*/
+
+/* Navbar */
+
 
 @media (max-width: 820px) {
     .logo img {
@@ -194,18 +196,26 @@ header {
      padding: 12px 0;
      margin: 0 16px;
     }
-}
 
-/*---------- Hero ----------*/
 
-.container {
-    width: 30%;
+/* Hero */
+
+
+    .container-hero .title h1 {
+        font-size: 30px;
+    }
+
+    .container-hero .subtitle h2 {
+        font-size: 18px;
+    }
+
 }
 
 
 /*---------- Media queries 480 ----------*/
 
-/*---------- Hero ----------*/
+
+/* Hero */
 
 @media (max-width: 480px) {
     .container-hero .title h1 {
@@ -215,8 +225,6 @@ header {
     .container-hero .subtitle h2 {
         font-size: 18px;
     }
-
-
 }
 
 
