--- a/css/documentos.css
+++ b/css/documentos.css
@@ -1,3 +1,13 @@
+/*---------- General styling ----------*/
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
+
 /*---------- Sections ----------*/
 
 #main-doc .main-section .properties {
