--- a/css/documentos.css
+++ b/css/documentos.css
@@ -4,6 +4,7 @@
 * {
     margin: 0;
     padding: 0;
+    text-decoration: none;
     box-sizing: border-box;
     font-family: 'Montserrat';
     --color-base: #004aad;
@@ -11,8 +12,134 @@
     --background-border-color: #000000;
 }
 
+.flex {
+    display: flex;
+}
+
 body {
     background-color: var(--color-white);
+}
+
+
+/*---------- Navbars ----------*/
+
+
+/*---------- Main navbar ----------*/
+
+
+header .main-header {
+    position: fixed;
+    z-index: 10;
+    width: 100%;
+    height: 55px;
+    background-color: var(--color-white);
+    box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2);
+}
+
+.logo img {
+    height: 50px;
+}
+
+.navbar {
+    justify-content: center;
+    align-items: center;
+    height: 55px;
+}
+
+.navbar ul li {
+    display: inline;
+    position: relative;
+    overflow: hidden;
+    font-size: 18px;
+    margin: 0 5px;
+    padding: 15px 20px;
+    height: 55px;
+    line-height: 55px;
+    font-family: 'Montserrat';
+    font-weight: 500;
+}
+
+.navbar .nav-ul a:after {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    right: 0;
+    width: 0;
+    bottom: 0px;
+    background: #004aad;
+    height: 4px;
+    transition-property: width;
+    transition-duration: 0.3s;
+    transition-timing-function: ease-out;
+}
+.navbar .nav-ul a:hover:after,
+.navbar .nav-ul a:focus:after,
+.navbar .nav-ul a:active:after {
+    left: 0;
+    right: auto;
+    width: 100%;
+}
+
+.button {
+    display: none;
+}
+
+.button div {
+    width: 25px;
+    height: 3px;
+    margin: 5px;
+    background-color: black;
+    transition: all 0.3s ease;
+}
+
+
+/* Secondary navbar */
+
+
+#navbar {
+    width: 100%;
+    padding: 1rem;
+    margin: 0 0 1rem 0;
+    text-align: center;
+}
+
+#navbar .logo {
+    font-size: 1.2rem;
+}
+
+#navbar .ul-container {
+    margin: 1rem 0 0 0;
+    width: 100%;
+    height: 10rem;
+    overflow-y: scroll;
+    border: 1px solid var(--background-border-color);
+}
+
+#navbar .ul-container li {
+    list-style: none;
+}
+
+#navbar .ul-container li a {
+    display: block;
+    border-bottom: 1px solid var(--background-border-color);
+    text-align: center;
+    font-size: 1rem;
+    margin: 0.2rem 0 0.2rem 0;
+    padding: 0.5rem;
+    text-decoration: none;
+    color: #004aad;
+}
+
+#navbar .ul-container li a:link,
+a:visited,
+a:active {
+    color: #004aad;
+}
+
+#navbar .ul-container li a:hover {
+    color: var(--color-white);
+    background-color: var(--color-base);
+    transition: background-color 1s ease;
 }
 
 
@@ -70,61 +197,6 @@ body {
 }
 
 
-/*---------- Navbar ----------*/
-
-
-.logo img {
-    height: 50px;
-}
-
-#navbar {
-    width: 100%;
-    background-color: var(--color-white);
-    padding: 1rem;
-    margin: 0 0 1rem 0;
-    text-align: center;
-}
-
-#navbar .logo {
-    font-size: 1.2rem;
-}
-
-#navbar .ul-container {
-    margin: 1rem 0 0 0;
-    width: 100%;
-    height: 10rem;
-    overflow-y: scroll;
-    border: 1px solid var(--background-border-color);
-}
-
-#navbar .ul-container li {
-    list-style: none;
-}
-
-#navbar .ul-container li a {
-    display: block;
-    border-bottom: 1px solid var(--background-border-color);
-    text-align: center;
-    font-size: 1rem;
-    margin: 0.2rem 0 0.2rem 0;
-    padding: 0.5rem;
-    text-decoration: none;
-    color: #004aad;
-}
-
-#navbar .ul-container li a:link,
-a:visited,
-a:active {
-    color: #004aad;
-}
-
-#navbar .ul-container li a:hover {
-    color: var(--color-white);
-    background-color: var(--color-base);
-    transition: background-color 1s ease;
-}
-
-
 /*---------- Media queries ----------*/
 
 
@@ -149,4 +221,78 @@ a:active {
     #main-doc {
         margin: 0 0 0 21rem;
     }
+}
+
+
+/*---------- Footer ----------*/
+    
+
+.site-footer {
+    text-align: center;
+}
+
+
+/*---------- Media queries 820 ----------*/
+
+
+/* Main navbar */
+
+
+@media (max-width: 820px) {
+
+    .navbar {
+        padding: 16px 24px;
+    }
+    
+    .logo img {
+        height: 36px;
+    }
+
+    .nav-ul {
+        position: absolute;
+        right: 0;
+        top: 0;
+        height: 80vh;
+        background-color: var(--color-white);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        width: 70%;
+        padding: 50px 16px;
+        transform: translateX(105%);
+        transition: transform 0.5s ease-in;
+        overflow-x: hidden;
+    }
+
+    .nav-ul li a {
+        padding: 12px 0;
+        margin: 0 16px;
+    }
+
+    .button {
+        display: block;
+        cursor: pointer;
+    }
+
+    .nav-active {
+        transform: translateX(0%);
+    }
+
+    .nav-close {
+        transform: translateX(100%);
+    }
+
+    .toggle .line-1 {
+        transform: rotate(-45deg) translate(-5px, 6px);
+    }
+
+    .toggle .line-2 {
+        opacity: 0;
+    }
+
+    .toggle .line-3 {
+        transform: rotate(45deg) translate(-5px, -6px);
+    }
+
 }
