--- a/css/documentos.css
+++ b/css/documentos.css
@@ -27,7 +27,7 @@ body {
 /* Main navbar */
 
 
-header .main-header {
+.main-header {
     position: fixed;
     z-index: 10;
     width: 100%;
@@ -161,7 +161,7 @@ a:active {
 }
 
 #main-doc .main-section header {
-    margin: 1rem 0 1rem 0;
+    margin: 5rem 0 1rem 0;
 }
 
 #main-doc .main-section hr {
