--- a/css/documentos.css
+++ b/css/documentos.css
@@ -89,7 +89,7 @@ body {
     width: 25px;
     height: 3px;
     margin: 5px;
-    background-color: black;
+    background-color: var(--color-base);
     transition: all 0.3s ease;
 }
 
