--- a/css/styles.css
+++ b/css/styles.css
@@ -252,6 +252,15 @@ header {
         font-size: 18px;
     }
 
+
+ /* About */
+ 
+ 
+    .container-about {
+        width: 100%;
+    }
+    
+
 }
 
 
