--- a/css/documentos.css
+++ b/css/documentos.css
@@ -123,7 +123,7 @@ body {
 #navbar .ul-container li a {
     display: block;
     border-bottom: 1px solid var(--background-border-color);
-    text-align: center;
+    text-align: left;
     font-size: 1rem;
     margin: 0.2rem 0 0.2rem 0;
     padding: 0.5rem;
