--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,7 @@ a {
 
 .flex {
     display: flex;
+    
 }
 
 .section-blue {
@@ -260,9 +261,8 @@ header {
         width: 100%;
     }
     
-    .container-about {
+    .container-video {
         width: 100%;
-        height: 100%;
     }
 
 }
