--- a/css/styles.css
+++ b/css/styles.css
@@ -130,6 +130,22 @@ header {
     text-align: center;
 }
 
+.video {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 */
+    padding-top: 25px;
+    height: 0;
+ }
+
+ .video iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+ }
+ 
+
 .container-about {
     padding: 60px 20px;
     justify-content: space-around;
@@ -260,10 +276,6 @@ header {
     .container-about {
         width: 100%;
     }
-    
-    .container-video {
-        width: 100%;
-    }
 
 }
 
@@ -283,6 +295,15 @@ header {
     .container-hero .subtitle h2 {
         font-size: 18px;
     }
+
+
+/* About */
+
+
+    .container-about {
+        width: 100%;
+    }
+
 }
 
 
