--- a/css/styles.css
+++ b/css/styles.css
@@ -147,7 +147,7 @@ header {
  
 
 .container-about {
-    padding: 60px 20px;
+    padding: 60px 0px 0px 0px;
     justify-content: space-around;
     align-content: space-around;
     align-items: center;
