--- a/css/styles.css
+++ b/css/styles.css
@@ -19,10 +19,6 @@ a {
     
 }
 
-.section-blue {
-    background-color: var(--color-base)
-}
-
 
 /*---------- Navbar ----------*/
 
@@ -108,6 +104,7 @@ header {
     position: relative;
     height: 80vh;
     padding-left: 5vw;
+    background-color: var(--color-base);
     /* background: url('/img/mepc.png') center center/cover no-repeat; */ 
 }
 
@@ -123,6 +120,10 @@ header {
     font-family: 'Montserrat';
     font-weight: 400;
     line-height: 2;
+}
+
+.container-hero .hero-media img {
+    width: 100px;
 }
 
 
