--- a/css/styles.css
+++ b/css/styles.css
@@ -47,12 +47,11 @@ header {
     position: relative;
     overflow: hidden;
     font-size: 18px;
-    margin: 0 5px;
     padding: 15px 20px;
     height: 55px;
     line-height: 55px;
     font-family: 'Montserrat';
-    font-weight: 500;
+    font-weight: 800;
 }
 
 .navbar .nav-ul a:after {
@@ -62,7 +61,7 @@ header {
     right: 0;
     width: 0;
     bottom: 0px;
-    background: #004aad;
+    background: var(--color-base);
     height: 4px;
     transition-property: width;
     transition-duration: 0.3s;
@@ -230,7 +229,7 @@ header {
 /* Navbar */
 
 
-@media (max-width: 820px) {
+@media (max-width: 1050px) {
     
     .logo img {
         height: 36px;
