--- a/css/styles.css
+++ b/css/styles.css
@@ -94,6 +94,7 @@ header {
 
 .container {
     width: 100%;
+    display: flex;
 }
 
 .container-hero {
@@ -107,48 +108,43 @@ header {
     /* background: url('/img/mepc.png') center center/cover no-repeat; */ 
 }
 
-.container-hero .title h1 {
-    font-size: 40px;
-    color: var(--color-white);
-    margin: 10px 0 10px 0;
+.container body {
+    padding: 1rem;
+    max-width: 1200px;
+    margin: 30px auto;
 }
 
-.container-hero .subtitle h2 {
-    font-size: 20px;
+.column-1 {
+    flex-basis: 70%; /* sets initial width to 70% */
+    padding: 1rem;
+    padding-left: 5vw;
+}
+
+.column-1 h1 {
+    font-size: 55px;
+    color: var(--color-white);
+    margin: 5rem 0 10px 0;
+}
+
+.column-1 h2 {
+    font-size: 23px;
     color: var(--color-white);
     font-family: 'Montserrat';
     font-weight: 400;
     line-height: 2;
 }
 
-.container-hero .hero-media img {
-    width: 100px;
+.column-2 img {
+    margin: 5vw 10vw 5vw 0;
+    width: 100%;
+    padding-right: 5vw;
 }
 
+.box {
+    background-color: var(--color-base);
+}
 
 /*---------- About ----------*/
-
-
-.container-video {
-    padding: 60px 20px;
-    text-align: center;
-    line-height: 2;
-}
-
-.video {
-    position: relative;
-    padding-bottom: 56.25%; /* 16:9 */
-    padding-top: 25px;
-    height: 0;
- }
-
- .video iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
- }
  
 
 .container-about {
@@ -204,6 +200,27 @@ header {
     text-align: center;
     width: 50%;
 }
+
+.container-video {
+    padding: 60px 20px;
+    text-align: center;
+    line-height: 2;
+}
+
+.video {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 */
+    padding-top: 25px;
+    height: 0;
+ }
+
+ .video iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+ }
 
 
 /*---------- Footer ----------*/
@@ -296,6 +313,9 @@ header {
         font-size: 18px;
     }
 
+    .column-2 img {
+        width: 100%;
+    }
 
  /* About */
  
@@ -340,3 +360,14 @@ header {
     }
 
 }
+
+@media only screen and (max-width: 900px) {
+    .container {
+        /* it place the items in vertical direction */
+      flex-direction: column;
+    }
+  
+    .box {
+      margin: 0 0 1rem;
+    }
+  }
