--- a/css/que-estudiamos.css
+++ b/css/que-estudiamos.css
@@ -1,4 +1,78 @@
+.avatar {
+    border-radius: 50%;
+    width: 80%;
+    max-width: 150px;
+    height: auto;
+    background-image: -webkit-linear-gradient(top, #f4f1ee, #fff);
+    background-image: linear-gradient(top, #f4f1ee, #fff);
+    border-radius: 50%;
+    box-shadow: 0px 8px 10px 0px rgb(0 0 0 / 30%), inset 0px 4px 1px 1px white, inset 0px -3px 1px 1px rgb(204 198 197 / 50%);
+    -webkit-transition: all .1s linear;
+    transition: all .1s linear;
+}
 
+.row {
+    font-size: 0.8rem;
+    text-align: center;
+}
+
+.title h1 {
+    margin: 0 0 10px 0;
+}
+
+
+
+
+
+
+
+
+/*
+.circle {
+    position: relative;
+    background-color: #3cb371;
+    border-radius: 50%;
+    padding: 5px 10px;
+    width: 20%;
+        display: inline-block;
+}
+.content {
+    position: absolute;
+    top: 0; right: 0; bottom: 0; left: 0;
+    overflow: auto;
+
+}
+.circle:before {
+    content: '';
+    display: block;
+    margin-top: 100%; 
+}
+
+.clearfix:before, .clearfix:after{
+    content: " ";
+    display: table;
+}
+
+.clearfix:after{
+    clear: both
+}
+
+.info-box{
+    margin-top: 20px;
+    width:100%;
+}
+
+.container{
+    margin-left: auto;
+    margin-right: auto;
+    padding-left:15px;
+    padding-right:15px;
+    text-align:center;
+}
+
+*{
+    box-sizing: border-box;
+}
 
 
 img {
@@ -19,9 +93,6 @@ body {
     margin-top: 70px;
     padding-top: 0;
     counter-reset: captions;
-}
-
-body {
     margin: 0;
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
     font-size: 1rem;
@@ -71,9 +142,7 @@ h1, h2, h3, h4, h5, h6 {
     hyphens: manual;
 }
 
-.section-heading h1 {
-    margin: 0 0 10px 0;
-}
+
 
 .people-widget .avatar {
     width: 80%;
@@ -83,6 +152,12 @@ h1, h2, h3, h4, h5, h6 {
 
 .avatar-circle {
     border-radius: 50%;
+    position: relative;
+}
+
+.circle-parent {
+    display:inline-block; 
+    margin:0 15px;
 }
 
 .avatar {
@@ -111,3 +186,5 @@ body {
     padding-top: 0;
     counter-reset: captions;
 }
+
+*/
