--- a/css/que-estudiamos.css
+++ b/css/que-estudiamos.css
@@ -20,114 +20,8 @@
     margin: 0 0 10px 0;
 }
 
-
-
-
-
-
-
-
-/*
-.circle {
-    position: relative;
-    background-color: #3cb371;
-    border-radius: 50%;
-    padding: 5px 10px;
-    width: 20%;
-        display: inline-block;
-}
-.content {
-    position: absolute;
-    top: 0; right: 0; bottom: 0; left: 0;
-    overflow: auto;
-
-}
-.circle:before {
-    content: '';
-    display: block;
-    margin-top: 100%; 
-}
-
-.clearfix:before, .clearfix:after{
-    content: " ";
-    display: table;
-}
-
-.clearfix:after{
-    clear: both
-}
-
-.info-box{
-    margin-top: 20px;
-    width:100%;
-}
-
-.container{
-    margin-left: auto;
-    margin-right: auto;
-    padding-left:15px;
-    padding-right:15px;
-    text-align:center;
-}
-
-*{
-    box-sizing: border-box;
-}
-
-
-img {
-    vertical-align: middle;
-    border-style: none;
-}
-
-.mb-4, .my-4 {
-    margin-bottom: 1.5rem !important;
-}
-
-body {
-    font-family: inherit;
-    font-size: 1rem;
-    line-height: inherit;
-    color: inherit;
-    background-color: #fff;
-    margin-top: 70px;
-    padding-top: 0;
-    counter-reset: captions;
-    margin: 0;
-    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.5;
-    color: #212529;
-    text-align: left;
-    background-color: #fff;
-}
-
-.people-widget {
-    font-size: 0.8rem;
-    text-align: center;
-}
-
-h1, .h1 {
-    font-size: 2.5rem;
-}
-
-h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
-    margin-bottom: .5rem;
-    font-weight: 500;
-    line-height: 1.2;
-}
 h1, h2, h3, h4, h5, h6 {
-    margin-top: 0;
-    margin-bottom: .5rem;
-}
-
-h1 {
-    font-size: 2.25rem;
-}
-
-h1, h2, h3, h4, h5, h6 {
-    font-family: "Montserrat",sans-serif;
+    font-family: "Montserrat";
     font-weight: 400;
     margin-top: 1rem;
     margin-bottom: .5rem;
@@ -142,49 +36,26 @@ h1, h2, h3, h4, h5, h6 {
     hyphens: manual;
 }
 
-
-
-.people-widget .avatar {
-    width: 80%;
-    max-width: 150px;
-    height: auto;
-}
-
-.avatar-circle {
-    border-radius: 50%;
-    position: relative;
-}
-
-.circle-parent {
-    display:inline-block; 
-    margin:0 15px;
-}
-
-.avatar {
-    width: 270px;
-    height: 270px;
-    margin: 0 auto;
-    object-fit: cover;
-}
-
-.avatar-circle {
-    background-image: -webkit-linear-gradient(top, #f4f1ee, #fff);
-    background-image: linear-gradient(top, #f4f1ee, #fff);
-    border-radius: 50%;
-    box-shadow: 0px 8px 10px 0px rgb(0 0 0 / 30%), inset 0px 4px 1px 1px white, inset 0px -3px 1px 1px rgb(204 198 197 / 50%);
-    -webkit-transition: all .1s linear;
-    transition: all .1s linear;
-}
-
 body {
     font-family: inherit;
     font-size: 1rem;
     line-height: inherit;
     color: inherit;
-    background-color: #fff;
     margin-top: 70px;
     padding-top: 0;
     counter-reset: captions;
+    margin: 0;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    text-align: left;
 }
 
-*/
+.network-icon {
+    list-style: none;
+}
+
+
+
+
