--- a/css/documentos.css
+++ b/css/documentos.css
@@ -102,6 +102,7 @@ body {
     padding: 1rem;
     margin: 0 0 1rem 0;
     text-align: center;
+    border: 1px solid var(--background-border-color);
 }
 
 #navbar .logo {
