--- a/css/documentos.css
+++ b/css/documentos.css
@@ -215,6 +215,10 @@ a:active {
 
 @media (max-width: 820px) {
 
+    #navbar div {
+        margin: 5rem 0 1rem 0;
+    }
+
     .navbar {
         padding: 16px 24px;
     }
