--- a/css/styles.css
+++ b/css/styles.css
@@ -101,17 +101,15 @@ header {
     width: 100%;
     display: flex;
     background-color: var(--color-base);
+    padding: 2rem 0 2rem 0;
 }
 
 .container body {
-    padding: 1rem;
     max-width: 1200px;
-    margin: 30px auto;
 }
 
 .column-1 {
-    flex-basis: 70%; 
-    padding: 1rem;
+    flex-basis: 50%; 
     padding-left: 5vw;
 }
 
