--- a/css/documentos.css
+++ b/css/documentos.css
@@ -268,6 +268,8 @@ a:active {
     .button {
         display: block;
         cursor: pointer;
+        position: absolute; 
+        right: 0;
     }
 
     .nav-active {
