--- a/css/documentos.css
+++ b/css/documentos.css
@@ -103,7 +103,7 @@ body {
 
 #navbar {
     width: 100%;
-    padding: 1rem;
+    padding: 5rem 0 0 0;
     margin: 0 0 1rem 0;
     text-align: center;
     border: 1px solid var(--background-border-color);
