--- a/css/styles.css
+++ b/css/styles.css
@@ -132,6 +132,27 @@ header {
     margin: 5rem 0 10px 0;
 }
 
+
+/* Animation */
+
+
+.container .column-1 h1, .column-1 h2, .column-2 img {
+    opacity: 0;
+    position: relative;
+    bottom: 1000px;
+    -webkit-animation: slide-bottom 2.5s cubic-bezier(0.87, 0, 0.13, 1) forwards;
+    animation: slide-bottom 2.5s forwards cubic-bezier(0.87, 0, 0.13, 1) forwards;
+}
+
+@keyframes slide-bottom {
+
+    100% { 
+        bottom: 0; 
+        opacity: 1; 
+    }
+}
+
+
 /*---------- About ----------*/
  
 
