--- a/css/que-estudiamos.css
+++ b/css/que-estudiamos.css
@@ -97,6 +97,24 @@ header {
 /*---------- Groups ----------*/
 
 
+.groups-section {
+    width: 100%;
+    padding: 10rem 0 0 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+
+@media screen and (max-width: 800px) {
+
+    .groups-section {
+    flex-direction: column;
+    padding: 3rem 2rem;
+    }
+
+}
+
 .avatar {
     border-radius: 50%;
     width: 80%;
