--- a/css/como-colaborar.css
+++ b/css/como-colaborar.css
@@ -96,6 +96,10 @@ header {
 /*---------- Features ----------*/
 
 
+.feature-description {
+    margin: 1rem 0 1rem 0;
+}
+
 .features-section {
     width: 100%;
     padding: 10rem 0 0 0;
@@ -112,12 +116,17 @@ header {
 }
 
 .feature-icon img {
-    height: 50px;
+    height: 100px;
     font-size: 5rem;
-    color: var(--yellow);
     text-align: center;
     margin: 0 auto;
-    transition: all 0.7s ease-in-out;
+}
+
+.feature-icon {
+    height: 100px;
+    font-size: 5rem;
+    text-align: center;
+    margin: 0 auto;
 }
 
 @media screen and (max-width: 800px) {
