--- a/css/que-estudiamos.css
+++ b/css/que-estudiamos.css
@@ -99,18 +99,20 @@ header {
 
 .groups-section {
     width: 100%;
-    padding: 10rem 0 0 0;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
 }
 
+.titles {
+    padding: 5rem 0 0 0;
+}
+
 @media screen and (max-width: 800px) {
 
     .groups-section {
     flex-direction: column;
-    padding: 3rem 2rem;
     }
 
 }
