contact title & button!

--- a/css/contacto.css
+++ b/css/contacto.css
@@ -97,6 +97,11 @@ header {
 /*---------- Form ----------*/
 
 
+.titles {
+    padding: 5rem 0 0 0;
+    text-align: center;
+}
+
 form {
     padding: 5rem 0 0 0;
     text-align: center;
@@ -110,24 +115,33 @@ form {
     margin: 0 auto;
 }
 
-button {
-    
+button {   
+    display: inline-block;
+    text-align: center;
+    vertical-align: middle;
+    cursor: pointer;
+    user-select: none;
+    background-color: transparent;
+    border: 1px solid transparent;
+    font-size: 1rem;
+    line-height: 1.5;
+    transition: color 0.15s;
     width: 100px;
-    padding: 5px .5rem 5px .5rem;
+    padding: .5rem .5rem .5rem .5rem;
     line-height: 1;
-    box-shadow: 3px 3px 0 0 #0072B2;
-    color: #0072B2;
-    border-color: #0072B2;
-    background-color: #fff !important;
+    box-shadow: 3px 3px 0 0 var(--color-base);
+    color: var(--color-base);
+    border-color: var(--color-base);
+    background-color: var(--color-white);
 }
 
 button:hover {
-    padding: 5px .5rem 5px .5rem;
+    padding: .5rem .5rem .5rem .5rem;
     line-height: 1;
-    box-shadow: 3px 3px 0 0 #0072B2;
-    color: #fff;
-    border-color: #0072B2;
-    background-color: #0072B2 !important;
+    box-shadow: 3px 3px 0 0 var(--color-base);
+    color: var(--color-white);
+    border-color: var(--color-white);
+    background-color: var(--color-base);
 }
 
 .form-group {
@@ -136,8 +150,6 @@ button:hover {
     width: 500px;
     margin: 0.5rem auto;
 }
-
-
 
 
 /*---------- Footer ----------*/
