--- a/css/styles-2.css
+++ b/css/styles-2.css
@@ -247,7 +247,7 @@ a {
     margin: 10px 0 10px 0;
 }
 
-.container-avatar .avatar-img img {
+.container-avatar .avatar img {
     width: 80%;
     max-width: 344px;
     height: auto;
