--- a/css/styles-2.css
+++ b/css/styles-2.css
@@ -52,6 +52,14 @@ a {
     line-height: 55px;
 }
 
+/* ----------- */
+.nav-ul .active a {
+    color: var(--color-base);
+    font-family: 'Montserrat';
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
 .nav-ul li a {
     color: #313131;
     font-family: 'Montserrat';
@@ -337,3 +345,10 @@ a {
     }
 
 }
+
+
+/* --------------- */ 
+
+
+
+
